--- a/DUOLGameEngine_DLL/DUOLGameEngine_DLL.vcxproj
+++ b/DUOLGameEngine_DLL/DUOLGameEngine_DLL.vcxproj
@@ -171,6 +171,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="include\DUOLGameEngine\BehaviorTreeSampleNode\Action_LookAt.h" />
     <ClInclude Include="include\DUOLGameEngine\BehaviorTreeSampleNode\Action_MakeNoise.h" />
     <ClInclude Include="include\DUOLGameEngine\BehaviorTreeSampleNode\Action_MoveDirectlyToward.h" />
     <ClInclude Include="include\DUOLGameEngine\BehaviorTreeSampleNode\Action_MoveTo.h" />
@@ -273,6 +274,7 @@
     <ClInclude Include="include\DUOLGameEngine\ECS\Component\NavMeshAgent.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\DUOLGameEngine\BehaviorTreeSampleNode\Action_LookAt.cpp" />
     <ClCompile Include="src\DUOLGameEngine\BehaviorTreeSampleNode\Action_MakeNoise.cpp" />
     <ClCompile Include="src\DUOLGameEngine\BehaviorTreeSampleNode\Action_MoveDirectlyToward.cpp" />
     <ClCompile Include="src\DUOLGameEngine\BehaviorTreeSampleNode\Action_MoveTo.cpp" />
