애니메이션 수정

--- a/DUOLFBXBinaryExporter/DUOLFBXBinaryExporter/DUOLFBXBinaryExporter.vcxproj
+++ b/DUOLFBXBinaryExporter/DUOLFBXBinaryExporter/DUOLFBXBinaryExporter.vcxproj
@@ -72,9 +72,11 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <OutDir>$(SolutionDir)Build\$(Platform)\$(Configuration)\</OutDir>
+    <LibraryPath>..\Dependency\boost_1_80_0\stage\lib\;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <OutDir>$(SolutionDir)Build\$(Platform)\$(Configuration)\</OutDir>
+    <LibraryPath>..\Dependency\boost_1_80_0\stage\lib\;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -116,7 +118,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)Dependency\boost_1_80_0\stage\lib;$(SolutionDir)Dependency\FBX\lib\debug;$(OutDir);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(OutDir);$(SolutionDir)Dependency\FBX\lib\debug;$(SolutionDir)Dependency\boost_1_80_0\stage\lib</AdditionalLibraryDirectories>
       <AdditionalDependencies>libfbxsdk-md.lib;libxml2-md.lib;zlib-md.lib;$(SolutionDir)build\$(Platform)\$(Configuration)\DUOLJson.lib;$(SolutionDir)build\$(Platform)\$(Configuration)\DUOLMath.lib;DUOLCommon.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -137,7 +139,7 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>libfbxsdk-md.lib;libxml2-md.lib;zlib-md.lib;$(SolutionDir)build\$(Platform)\$(Configuration)\DUOLJson.lib;$(SolutionDir)build\$(Platform)\$(Configuration)\DUOLMath.lib;DUOLCommon.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(SolutionDir)Dependency\boost_1_80_0\stage\lib;$(SolutionDir)Dependency\FBX\lib\release\;$(OutDir);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(OutDir);$(SolutionDir)Dependency\FBX\lib\debug;$(SolutionDir)Dependency\boost_1_80_0\stage\lib</AdditionalLibraryDirectories>
     </Link>
     <ProjectReference>
       <LinkLibraryDependencies>false</LinkLibraryDependencies>
