--- a/DUOLGameEngine_DLL/DUOLGameEngine_DLL.vcxproj.filters
+++ b/DUOLGameEngine_DLL/DUOLGameEngine_DLL.vcxproj.filters
@@ -100,6 +100,8 @@
     <ClCompile Include="src\DUOLGameEngine\BehaviorTreeSampleNode\Action_Wait.cpp" />
     <ClCompile Include="src\DUOLGameEngine\BehaviorTreeSampleNode\Action_LookAt.cpp" />
     <ClCompile Include="src\DUOLGameEngine\BehaviorTreeSampleNode\Condition_Random.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\FiniteStateMachine\FiniteStateMachine.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\FiniteStateMachine\StateBase.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\DUOLGameEngine\ECS\Component\Image.h" />
@@ -204,5 +206,7 @@
     <ClInclude Include="include\DUOLGameEngine\Util\BehaviorTreeTypeConvert.h" />
     <ClInclude Include="include\DUOLGameEngine\BehaviorTreeSampleNode\Action_LookAt.h" />
     <ClInclude Include="include\DUOLGameEngine\BehaviorTreeSampleNode\Condition_Random.h" />
+    <ClInclude Include="include\DUOLGameEngine\FiniteStateMachine\FiniteStateMachine.h" />
+    <ClInclude Include="include\DUOLGameEngine\FiniteStateMachine\StateBase.h" />
   </ItemGroup>
 </Project>
