--- a/DUOLClient/DUOLClient.vcxproj.filters
+++ b/DUOLClient/DUOLClient.vcxproj.filters
@@ -102,6 +102,9 @@
     <ClCompile Include="src\DUOLClient\Player\FSM\PlayerState_Move.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="src\DUOLClient\Player\FSM\PlayerStateBase.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
     <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Action\Action_Hit.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
@@ -198,6 +201,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="include\DUOLClient\Player\FSM\PlayerState_Move.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="include\DUOLClient\Player\FSM\PlayerStateBase.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_Hit.h">
