에디터 편의 기능 개발 중
커서 무한 스크롤링 구현 / 에디터 Contents Browser 구현 중 ..

--- a/DUOLEditor/DUOLEditor.vcxproj
+++ b/DUOLEditor/DUOLEditor.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\DUOLEditor\Modules\ContentsBrowser.h" />
     <ClInclude Include="include\DUOLEditor\Util\FileDialog\FileDialog.h" />
     <ClInclude Include="include\DUOLEditor\Modules\MenuBar.h" />
     <ClInclude Include="include\DUOLEditor\Util\ImGuiNavDebugDraw.h" />
@@ -104,6 +105,7 @@
     <ClInclude Include="include\DUOLEditor\Util\FileDialog\WriteFileDialog.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\DUOLEditor\Modules\ContentsBrowser.cpp" />
     <ClCompile Include="src\DUOLEditor\Util\MessageBox\MessageBox.cpp" />
     <ClCompile Include="src\DUOLEditor\Util\FileDialog\ReadFileDialog.cpp" />
     <ClCompile Include="src\DUOLEditor\Util\FileDialog\FileDialog.cpp" />
