--- a/DUOLGraphicsEngine/DUOLGraphicsEngine.vcxproj
+++ b/DUOLGraphicsEngine/DUOLGraphicsEngine.vcxproj
@@ -162,7 +162,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="include\DUOLGraphicsEngine\RenderManager\RenderingPipeline\RenderingPipeline.h" />
-    <ClInclude Include="src\DUOLGraphicsEngine\ResourceManager\Resource\LightManager.h" />
+    <ClInclude Include="include\DUOLGraphicsEngine\ResourceManager\Resource\Light.h" />
+    <ClInclude Include="src\DUOLGraphicsEngine\ResourceManager\LightManager.h" />
     <ClInclude Include="src\DUOLGraphicsEngine\ResourceManager\ResourceManager.h" />
     <ClInclude Include="src\DUOLGraphicsEngine\ResourceManager\Resource\CascadeShadow.h" />
     <ClInclude Include="src\DUOLGraphicsEngine\RenderManager\Renderer\ParticleRenderer.h" />
@@ -192,7 +193,8 @@
     <ClInclude Include="src\DUOLGraphicsEngine\RenderManager\Renderer\StaticMeshRenderer.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\DUOLGraphicsEngine\ResourceManager\Resource\LightManager.cpp" />
+    <ClCompile Include="src\DUOLGraphicsEngine\ResourceManager\Resource\Light.cpp" />
+    <ClCompile Include="src\DUOLGraphicsEngine\ResourceManager\LightManager.cpp" />
     <ClCompile Include="src\DUOLGraphicsEngine\ResourceManager\Resource\CascadeShadow.cpp" />
     <ClCompile Include="src\DUOLGraphicsEngine\RenderManager\Renderer\ParticleRenderer.cpp" />
     <ClCompile Include="src\DUOLGraphicsEngine\RenderManager\Renderer\SkinnedMeshRenderer.cpp" />
